[package]
name = "ememdb_rs"
authors = ["devPharmacist at The Around"]
description = "A simple in-memory database for TheAround inhouse use"
youtube = "https://www.youtube.com/channel/UCxvzyEDKmyIcbZbjgtxX6mw"
repository = "https://github.com/devatthearound/ememdb_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.3.0"
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.5.4"
postgrest = "1.6.0"
dotenv = "0.15.0"
tokio = "1.40.0"
serde_derive = "1.0.210"
clap = "4.5.19"
